--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-express-oop",
+  "name": "ts-clean-arch",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
     "express": "^4.17.1",
+    "inversify": "^6.0.1",
     "mssql": "^7.2.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.37",
