--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon src/main.ts",
+    "dev:webpack": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,7 +23,12 @@
     "typescript": "^4.4.3"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "nodemon": "^2.0.12",
-    "ts-node": "^10.2.1"
+    "start-server-nestjs-webpack-plugin": "^2.2.5",
+    "ts-node": "^10.2.1",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
