[ci] update drone config yml 註解npm run test

--- a/.drone.yml
+++ b/.drone.yml
@@ -18,7 +18,7 @@ steps:
           - apk add --no-cache git
           - apk add g++ make python
           - npm ci --include=dev
-          - npm run test
+        #   - npm run test
 
     - name: sonar-scanner
       image: aosapps/drone-sonar-plugin:1.1
