--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "nodemon": "^2.0.12",
     "start-server-nestjs-webpack-plugin": "^2.2.5",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.2.1",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2",
