--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@nestjs/typeorm": "^8.0.2",
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
+    "dotenv-flow": "^3.2.0",
+    "env-var": "^7.3.1",
     "express": "^4.17.1",
     "inversify": "^6.0.1",
     "mssql": "^7.2.1",
@@ -26,6 +28,7 @@
     "typescript": "^4.4.3"
   },
   "devDependencies": {
+    "@types/dotenv-flow": "^3.2.0",
     "@types/swagger-ui-express": "^4.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "nodemon": "^2.0.12",
