--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start:dev": "NODE_ENV=local npx tsc-watch -p tsconfig.json --onSuccess \"node dist/main.js\"",
+    "start:dev": "NODE_ENV=local npx nodemon",
     "start:webpack": "npm run doc & webpack --config webpack.config.js",
     "doc": "tsoa spec -c tsoa.json",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -34,8 +34,7 @@
     "nodemon": "^2.0.12",
     "start-server-nestjs-webpack-plugin": "^2.2.5",
     "ts-loader": "^9.4.2",
-    "ts-node": "^10.2.1",
-    "tsc-watch": "^6.0.4",
+    "ts-node": "^10.9.1",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2",
     "webpack-node-externals": "^3.0.0"
